changed the logo and added a sub text under the logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <main>
         <header>
             <div class="logo">
-                <h1>Faith Art</h1>
+                <h1>استرها معانا يا رببب !!!!!</h1>
+                <p>ربنا يتولى بقى</p>
             </div>
             <nav>
                 <ul>
