--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">فلوس</a></li>
+                    <li><a href="#">نقود</a></li>
+                    <li><a href="#">مصاري</a></li>
+                    <li><a href="#">money</a></li>
+                    <li><a href="#">في الاحلام</a></li>
                 </ul>
             </nav>
         </header>
